overflow fix

--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body {
     font-family: 'Outfit';
     font-size: 20px;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .top {
